# OpenISI

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  export_presets.cfg  openisi_shm.gdextension  openisi_shm.gdextension.uid  project.godot  pyproject.toml
.cargo/: config.toml
barebones_python_reference/: isi_config.json  stimulus_generation.py
config/: analysis.json  analysis.toml  experiment.json  experiment.toml  hardware.json  preferences.json  rig.json  rig.toml  rig.toml.tmp  stimulus.json
crates/agreement/: Cargo.toml
crates/agreement/src/: lib.rs
crates/isi-analysis/: Cargo.toml
crates/isi-analysis/examples/: baseline_compare.rs  capture_baseline.rs  gen_synthetic_smoke.rs  mps_diagnostic.rs  oracle_state.rs  sq_allen_demo.rs  sq_mask_demo.rs  synthetic_recovery.rs
crates/isi-analysis/src/: bridge.rs  incremental.rs  io.rs  lib.rs  mat5.rs  math.rs  migrate.rs  oisi_schema.rs  params.rs  segmentation.rs  test_support.rs
crates/isi-analysis/src/compute/: accumulator.rs  backend.rs  complex.rs  conversions.rs  fallback.rs  golden_vfs.rs  mod.rs  ops.rs  projection.rs  responsiveness.rs  torch_ops.rs
crates/isi-analysis/src/io/: import.rs  meta.rs
crates/isi-analysis/src/methods/: baseline.rs  cortex_source.rs  cycle_average.rs  cycle_combine.rs  direction_smoothing.rs  eccentricity.rs  mod.rs  patch_extraction.rs  patch_refinement.rs  patch_threshold.rs  phase_smoothing.rs  quality_gate.rs  rectification.rs  response_normalization.rs  sign_map_smoothing.rs  vfs_computation.rs
crates/isi-analysis/src/pipeline/: fingerprint.rs  graph.rs  mod.rs  orchestrator.rs  stage.rs  stages.rs  state.rs
crates/isi-analysis/src/segmentation/: connectivity.rs  golden_cortex_morph.rs  mod.rs  morphology.rs
crates/isi-analysis/tests/: equivalence.rs  incremental.rs  no_transcription_gate.rs  oisi_schema_contract.rs  regression_oisi.rs  synthetic_fullmovie.rs  synthetic_ground_truth.rs
crates/isi-analysis/tests/fixtures/: fixtures.toml  tolerances.toml
crates/isi-analysis/tests/fixtures/synthetic/: smoke.baseline.oisi  smoke.oisi
crates/isi-analysis/tests/golden/: figdata_oracle_state_snlc.m  gen_adaptsmooth_golden.m  gen_amplitude_golden.py  gen_bwdist_golden.m  gen_centerpatch_golden.m  gen_combine_golden.m  gen_cortex_full_golden.m  gen_cortex_morph_golden.m  gen_cortexrel_golden.py  gen_dff_golden.py  gen_dft_golden.py  gen_dilation_patches2_golden.py  gen_ecc_golden.py  gen_eccfull_golden.py  gen_fftgauss_golden.m  gen_fusepatchesx_golden.m  gen_gaussian_golden.py  gen_getnlocalmin_golden.m  gen_interp2spline_golden.m  gen_is_adjacent_golden.py  gen_label4conn_golden.py  gen_largestcc_tie_golden.py  gen_local_min_golden.py  gen_maganiso_golden.py  gen_magnification_golden.py  gen_magroi_golden.m  gen_merge_two_golden.py  gen_overrep_golden.m  gen_patch_extraction_golden.py  gen_patch_morph_golden.py  gen_patch_threshold_golden.py  gen_patchcom_golden.m  gen_patchsign_golden.m  gen_patchsign_majority_golden.py  gen_patchvs_golden.py  gen_power_snr_golden.py  gen_reflect_wrap_golden.py  gen_reliability_golden.py  gen_resetpatch_golden.m  gen_sigmaarea_golden.py  (+18 more)
crates/isi-analysis/tests/golden/fixtures/: cortex_full_golden.npy  cortex_full_vfs.npy  cortexrel_alt_fwd.npy  cortexrel_alt_rev.npy  cortexrel_azi_fwd.npy  cortexrel_azi_rev.npy  cortexrel_expected.npy  cortexrel_raw.npy  cortexrel_tie_azi_fwd.npy  cortexrel_tie_azi_rev.npy  cortexrel_tie_expected.npy  dff_dff.npy  dff_f0.npy  dff_f0_median.npy  dff_frames.npy  largestcc_clear_input.npy  largestcc_clear_out.npy  largestcc_tie_input.npy  largestcc_tie_out.npy  maganiso_axis.npy  maganiso_dhdx.npy  maganiso_dhdy.npy  maganiso_distortion.npy  maganiso_dvdx.npy  maganiso_dvdy.npy  magroi_in.npy  magroi_meta.npy  magroi_out.npy  powersnr_mask.npy  powersnr_movie.npy  pthr_allen.npy  pthr_garrett.npy  pthr_vfs.npy  rel_expected.npy  rel_z_im.npy  rel_z_re.npy  snr_large_dff.npy  snr_large_out.npy  snr_large_ts.npy  snr_small_dff.npy  (+16 more)
crates/isi-analysis/tests/oracle/: .gitignore  README.md
crates/isi-analysis/tests/oracle/nat/: bridge.py  pyproject.toml
crates/isi-analysis/tests/oracle/snlc/: README.md  bridge.m
crates/oisi/: Cargo.toml
crates/oisi/src/: error.rs  import.rs  io.rs  lib.rs  mat5.rs  schema.rs  types.rs
crates/openisi-params/: Cargo.toml
crates/openisi-params/src/: analysis_kinds.rs  computed.rs  constraints.rs  definitions.rs  error.rs  hardware.rs  labels.rs  lib.rs  macros.rs  observer.rs  param_json.rs  registry.rs  registry_param.rs  snapshot.rs  toml_io.rs
crates/openisi-params/src/config/: analysis.rs  experiment.rs  loader.rs  mod.rs  rig.rs  store.rs  ui_state.rs
crates/openisi-stimulus/: Cargo.toml
crates/openisi-stimulus/src/: dataset.rs  geometry.rs  lib.rs  renderer.rs  sequencer.rs
crates/openisi-stimulus/src/shaders/: stimulus.wgsl
crates/openisi-stimulus/tests/: golden_spherical_marshel.rs
crates/synth/: Cargo.toml
crates/synth/src/: acquire.rs  encode.rs  lib.rs  map.rs  realism.rs  rng.rs
daemon/: __init__.py  camera_test.py  config.py  (+7 more)
extension/: Cargo.toml
extension/src/: lib.rs  vsync_core.rs  vsync_provider.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis_thread.rs  camera_quality.rs  camera_thread.rs  commands.rs  config.rs  config_paths.rs  error.rs  events.rs  export.rs  lib.rs  logging.rs  main.rs  messages.rs  monitor.rs  render.rs  sample_data.rs  session.rs  state.rs  stimulus_thread.rs  timing.rs
src-tauri/src/commands/: acquire.rs  analysis.rs  experiment.rs  hardware.rs  library.rs  mod.rs
src-tauri/src/params/: commands.rs  config_descriptors.rs  constraints.rs  definitions.rs  hardware.rs  macros.rs  mod.rs  observer.rs  registry.rs  snapshot.rs  toml_io.rs
src-tauri/src/params/golden/: descriptors_analysis.json  descriptors_experiment.json  descriptors_rig.json  descriptors_ui_state.json
src-tauri/tests/: commands_integration.rs  nwb_export_e2e.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+327 files in other folders)
