[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/openisi-stimulus",
    "crates/pco-sdk",
    "crates/isi-analysis",
]

# Optimize compute-heavy crates even in dev builds.
# isi-analysis does heavy numerical work (DFT, dF/F) that is
# 5-10x slower without optimizations.
[profile.dev.package.isi-analysis]
opt-level = 3

[profile.dev.package.ndarray]
opt-level = 3

[profile.dev.package.num-complex]
opt-level = 3
