[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/openisi-stimulus",
    "crates/pco-sdk",
    "crates/openisi-params",
    # The .oisi file format (schema + HDF5 I/O + import) — light, no analysis
    # compute, so synth/tools/src-tauri can read/write recordings directly.
    "crates/oisi",
    "crates/isi-analysis",
    # Dev-only task runner (oracle golden regeneration + freshness gate).
    # Nothing depends on it, so the app/release build never compiles it.
    "xtask",
    # Dev-only numerical-agreement test utility (ε-grounded Tol + one
    # comparator), shared by the goldens and the equivalence harness.
    "crates/agreement",
    # Dev-only synthetic ground-truth retinotopy generator (correctness/stress
    # validation). See docs/SYNTHETIC_VALIDATION.md.
    "crates/synth",
]

# Optimize compute-heavy crates even in dev builds.
# isi-analysis does heavy numerical work (DFT, dF/F) that is
# 5-10x slower without optimizations.
[profile.dev.package.isi-analysis]
opt-level = 3

[profile.dev.package.ndarray]
opt-level = 3

[profile.dev.package.num-complex]
opt-level = 3
