[package]
name = "openisi_shm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared memory GDExtension for OpenISI"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vsync-test"
path = "src/bin/vsync_test.rs"

[dependencies]
godot = "0.4"
shared_memory = "0.12"

# Vulkan for hardware vsync timestamps (cross-platform)
ash = "0.38"
ash-window = "0.13"

# Cross-platform windowing for vsync timestamp capture
winit = { version = "0.29", default-features = false, features = ["rwh_06"] }
raw-window-handle = "0.6"

# macOS - Core Graphics for monitor info
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

# Windows - Windows API for monitor info
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }

# Linux - No special deps, reads EDID from sysfs
[target.'cfg(target_os = "linux")'.dependencies]

[profile.release]
opt-level = 3
lto = true
