[package]
name = "openisi"
version = "0.1.0"
edition = "2024"
description = "OpenISI — Intrinsic Signal Imaging acquisition and analysis"
default-run = "openisi"

[dependencies]
openisi-stimulus = { path = "../crates/openisi-stimulus" }
pco-sdk = { path = "../crates/pco-sdk" }
isi-analysis = { path = "../crates/isi-analysis" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossbeam-channel = "0.5"
ndarray = "0.17"
hdf5 = { package = "hdf5-metno", version = "0.12" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11", features = ["static", "zlib"] }
wgpu = "24"
pollster = "0.4"
raw-window-handle = "0.6"
png = "0.17"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Graphics_Dwm",
    "Win32_System_Time",
] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "openisi_lib"
path = "src/lib.rs"

[[bin]]
name = "openisi"
path = "src/main.rs"
