[package]
name = "openisi"
version = "0.1.0"
edition = "2024"
description = "OpenISI — Intrinsic Signal Imaging acquisition and analysis"
default-run = "openisi"

[features]
# Build the app with the CUDA Burn backend for analysis compute. Forwards
# to `isi-analysis/cuda`; requires the CUDA toolkit at build time. Default
# (no feature) uses the portable ndarray CPU backend.
cuda = ["isi-analysis/cuda"]

[dependencies]
openisi-stimulus = { path = "../crates/openisi-stimulus" }
openisi-params = { path = "../crates/openisi-params" }
pco-sdk = { path = "../crates/pco-sdk" }
isi-analysis = { path = "../crates/isi-analysis" }
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ndarray = "0.17"
hdf5 = { package = "hdf5-metno", version = "0.12" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11", features = ["static", "zlib"] }
wgpu = "24"
pollster = "0.4"
raw-window-handle = "0.6"
png = "0.17"
clap = { version = "4", features = ["derive"] }
tauri-plugin-dialog = "2"
ureq = "3"
# Used only to extract a downloaded sample-data bundle (sample_data.rs).
# Default features pull `lzma`/`xz` support (→ lzma-sys, which links the
# native `lzma` lib and collides with the `liblzma-sys` that burn-cuda's
# CubeCL-CPU LLVM bundler pulls). Sample bundles use deflate, so we drop
# the xz/lzma codecs and keep the common ones.
zip = { version = "2", default-features = false, features = ["deflate", "bzip2", "zstd"] }
thiserror = "2"
paste = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Performance",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Graphics_Dwm",
    "Win32_System_Time",
    "Win32_System_Threading",
    "Win32_Media",
] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "openisi_lib"
path = "src/lib.rs"

[[bin]]
name = "openisi"
path = "src/main.rs"

[[bin]]
name = "headless"
path = "src/bin/headless/main.rs"
