[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
description = "Dev-only task runner for OpenISI (oracle golden-fixture regeneration + freshness gate). Never a dependency of the app or library crates."

# One internal dependency only (`agreement`), no third-party crates beyond what
# it already pulls in (`approx`). The freshness gate compares REGENERATED float
# fixtures against the committed copies; that comparison must be device-
# independent (the CI toolchain — Python 3.13 on ubuntu, genuine MATLAB for the
# .m generators — is not the dev host that committed them), so it goes through the
# project's single ε-grounded
# comparator (`agreement::Tol`) rather than a byte-identity check. Using the same
# `Tol` the goldens/equivalence harness use keeps one tolerance vocabulary across
# the whole validation surface. The release build still never compiles xtask.
[dependencies]
agreement = { path = "../crates/agreement" }
npyz = "0.9.1"
