[package]
name = "isi-analysis"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ISI retinotopy analysis — pure library, no GUI dependency"

[dependencies]
ndarray = { version = "0.17", features = ["approx", "rayon"] }
rayon = "1"
num-complex = "0.4"
num-traits = "0.2"
hdf5 = { package = "hdf5-metno", version = "0.12" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.11", features = ["static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
thiserror = "2"
