[package]
name = "openisi-params"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenISI parameter SSoT — Registry, define_params! macro, RegistryParam markers, Tagged<P> wrapper. Single source of truth for every parameter the user can configure."

[dependencies]
openisi-stimulus = { path = "../openisi-stimulus" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
paste = "1"
thiserror = "2"
