[package]
name = "openisi-params"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OpenISI parameter SSoT — typed serde + schemars + garde config structs (RigConfig/ExperimentConfig/AnalysisConfig/UiStateConfig) and the ConfigStore. Single source of truth for every parameter the user can configure."

[dependencies]
openisi-stimulus = { path = "../openisi-stimulus" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
strum = { version = "0.26", features = ["derive"] }
# Standards stack for the typed-config reformulation (Phase 3): schemars derives
# the JSON Schema from the structs (UI metadata/validation/docs); garde provides
# derive-based + context-aware validation (the dynamic hardware constraints).
schemars = "0.8"
garde = { version = "0.20", features = ["derive"] }
# RFC 7386 JSON Merge Patch — merges a sparse overlay (dev/user layer) onto the
# shipped baseline. The standard op, not a hand-rolled recursive merge.
json-patch = "3"
