[package]
name = "openisi-stimulus"
version = "0.1.0"
edition = "2024"
description = "Pure stimulus library: sequencer, geometry, dataset — no windowing, no threading"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Derives the JSON Schema for the stimulus enums so the typed config
# (openisi-params Phase 3) can surface them to the UI/validation layer.
schemars = "0.8"
rand = "0.9"
strum = { version = "0.26", features = ["derive"] }
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
# Text rendering for the calibration tick labels on the stimulus
# preview. Uses cosmic-text for shaping + a glyph atlas for the GPU.
# Auto-discovers system fonts.
glyphon = "0.8"
tracing = "0.1"

[dev-dependencies]
approx = "0.5"
# The project's single ε-grounded numerical-agreement comparator, shared with the
# isi-analysis goldens and the equivalence harness (no per-test magic thresholds).
agreement = { path = "../agreement" }
npyz = "0.9.1"
